Оформление страниц (первая версия, вероятно, последняя)

--- a/CeasarCrypt/Content/Site.css
+++ b/CeasarCrypt/Content/Site.css
@@ -1,24 +1,61 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #222226;
+    color: #CCCCCC;
+    font-size: 17px;
 }
 
-/* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    background-color: #333336;
+    box-shadow: 0 0 20px rgba(0,0,0,0.35) !important;
+    padding: 0px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
 textarea {
-    max-width: 280px;
+    width: 100%;
+}
+
+.pre-wrap{
+    white-space: pre-wrap;
+}
+
+/*Ссылки*/
+a:link {
+  color: #FFBBBB; 
+  border-bottom: 1px dashed;
+  text-decoration: none;
+}
+a:visited {
+    color: #FFBBBB;
+}
+a:hover {
+  color: white; 
+}
+a:active {
+    color: #FFBBBB;
+    border-bottom: 1px dashed;
+}
+
+/*Заголовки*/
+h1, h2, h3, h4, h5, h6 {
+    color: white;
+}
+
+hr {
+    background-color: white;
+}
+button {
+    text-decoration: none;
+    padding: 5px 15px;
+    font-size: 18px;
+    border-radius: 3px;
+    background-color: #222226;
+    color: white;
+    border: 0px solid hotpink;
+    border-bottom-width: 2px;
+}
+
+input[type=range] {
+    width: 50%;
 }
