--- a/CeasarCrypt/Views/Home/Index.cshtml
+++ b/CeasarCrypt/Views/Home/Index.cshtml
@@ -1,31 +1,36 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Главная";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div>
+    <img class="img-fluid" src="~/Content/images/indexBackground.jpg" alt="Responsive image" style="height: 300px; vertical-align:central; width:100%;"/>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="container p-4">
+    <div>
+        <h3>Шифр Цезаря</h3><hr/>
+        <div class="container">
+            <p>Это вид шифра подстановки, в котором каждый символ в открытом тексте заменяется символом, находящимся на некотором постоянном числе позиций левее или правее него в алфавите.<br/>Например, в шифре со сдвигом вправо на 3, А была бы заменена на Г, Б станет Д, и так далее.</>
+        </div>
+        <h3>Хотите попробовать?</h3><hr/>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4">
+                <h2>Шифрование</h2>
+                <p>В результате шифрования вы получите текст, который можно будет прочитать только узнав ключ.</p>
+                <p><a class="btn btn-secondary" href="/Cryption/Cryption">Узнать больше &raquo;</a></p>
+            </div>
+            <div class="col-xl-4">
+                <h2>Расшифровка</h2>
+                <p>Вы знаете ключ от зашифрованного текста? Расшифруйте его у нас!</p>
+                <p><a class="btn btn-secondary" href="/Cryption/Decryption">Узнать больше &raquo;</a></p>
+            </div>
+            <div class="col-xl-4">
+                <h2>Подобрать ключ</h2>
+                <p>Наши алгоритмы попробуют для вас выявить наиболее подходящие ключи</p>
+                <p><a class="btn btn-secondary" href="/Cryption/FindKey">Узнать больше &raquo;</a></p>
+            </div>
+        </div>
     </div>
 </div>
