Обновлен интефейс страницы "Контакты". Добавлены ссылки на различные социальные сети разрабочика.

--- a/CeasarCrypt/Views/Home/Contact.cshtml
+++ b/CeasarCrypt/Views/Home/Contact.cshtml
@@ -1,3 +1,14 @@
 ﻿@{
     ViewBag.Title = "Контакты";
 }
+<div class="container p-4">
+    <h2>Наши социальные сети:</h2>
+        <img src="~/Content/icons/vk.png" height="50" width="50"><a class="ml-3" href="https://vk.com/swim_yo" target="_blank">ВКонтакте</a><br><br>
+        <img src="~/Content/icons/instagram.png" height="50" width="50"><a class="ml-3" href="https://www.instagram.com/di_your/" target="_blank">Instagram</a><br><br>
+        <img src="~/Content/icons/facebook.png" height="50" width="50"><a class="ml-3" href="https://www.facebook.com/diana.hrustovskaya" target="_blank">Facebook</a><br><br>
+        <img src="~/Content/icons/github.png" height="50" width="50"><a class="ml-3" href="https://github.com/dkhrustovskaia" target="_blank">Github</a><br><br>
+        <img src="~/Content/icons/linkedin.png" height="50" width="50"><a class="ml-3" href="https://www.linkedin.com/in/diana-khrustovskaia-2b1619182/" target="_blank">LinkedIn</a><br><br>
+        <img src="~/Content/icons/email.png" height="50" width="50"><a class="ml-3" href="mailto:hrusty96@mail.ru">Mail.ru</a>
+        <a class="ml-3" href="mailto:kriome99@gmail.com">Gmail</a>
+        <a class="ml-3" href="mailto:d.hrustovskaya@yandex.ru">Yandex</a>
+</div>
