Слегка отредактирован интерфейс домашней страницы

--- a/CeasarCrypt/Views/Home/Index.cshtml
+++ b/CeasarCrypt/Views/Home/Index.cshtml
@@ -19,17 +19,17 @@
             <div class="col-xl-4">
                 <h2>Шифрование</h2>
                 <p>В результате шифрования вы получите текст, который можно будет прочитать только узнав ключ.</p>
-                <p><a class="btn btn-secondary" href="/Cryption/Cryption">Узнать больше &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/Cryption/Cryption">Зашифровать &raquo;</a></p>
             </div>
             <div class="col-xl-4">
                 <h2>Расшифровка</h2>
                 <p>Вы знаете ключ от зашифрованного текста? Расшифруйте его у нас!</p>
-                <p><a class="btn btn-secondary" href="/Cryption/Decryption">Узнать больше &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/Cryption/Decryption">Расшифровать &raquo;</a></p>
             </div>
             <div class="col-xl-4">
-                <h2>Подобрать ключ</h2>
+                <h2>Подбор ключа</h2>
                 <p>Наши алгоритмы попробуют для вас выявить наиболее подходящие ключи</p>
-                <p><a class="btn btn-secondary" href="/Cryption/FindKey">Узнать больше &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="/Cryption/FindKey">Подобрать ключ &raquo;</a></p>
             </div>
         </div>
     </div>
