--- a/CeasarCrypt/Views/Cryption/FindKey.cshtml
+++ b/CeasarCrypt/Views/Cryption/FindKey.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container p-5">
     <h2>Что произойдёт в результате поиска?</h2><hr/>
-    <h4>Наш алгоритм обращается к базе данных слов, которые чаще все используются. Шанс нахождения правильного ключа 80%</h4>
+    <h4>Наш алгоритм проанализирует ваш текст и поберёт самые подходящие варианты. Учтите, что чем больше текст, тем больше шанс верного ключа</h4>
 
     @using (Html.BeginForm("FindKey", "Cryption", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
